add assets, setup icons, work on header and scrolldown

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Alliance Bernstein</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./assets/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <section class="hero">
@@ -20,9 +38,13 @@
             <li class="header-nav__item">How We Think</li>
             <li class="header-nav__item">The Team</li>
             <li class="header-nav__item">Our Story</li>
-            <li class="header-nav__item">Search</li>
             <li class="header-nav__item">
-              <button>Log In</button>
+              <i class="fas fa-search fa-lg"></i>
+            </li>
+            <li class="header-nav__item">
+              <button>
+                <i class="far fa-user icon-space__right"></i>Log In
+              </button>
             </li>
           </ul>
         </nav>
@@ -45,8 +67,12 @@
           </p>
         </article>
       </main>
-      <div class="hero__cta"></div>
+      <div class="hero__cta">
+        <i class="fas fa-arrow-circle-down fa-2x"></i>
+      </div>
       <div class="hero__scroll-down`"></div>
     </section>
+
+    <i class="fas fa-arrow-right"></i>
   </body>
 </html>
