add readme and build out cta and wayfinder

--- a/index.html
+++ b/index.html
@@ -53,26 +53,38 @@
         <aside>
           <div class="aside-wayfinder">
             <div class="dotted-border"></div>
+            <div class="dotted-border"></div>
+            <div class="dotted-border"></div>
+            <div class="dotted-border"></div>
+            <div class="dotted-border"></div>
             <p>Introduction</p>
             <div class="blue-border"></div>
           </div>
         </aside>
         <article>
-          <h1 class="hero__main-heading">Progress built on partnership.</h1>
+          <h1 class="hero__main-heading">
+            Progress built<br />on partnership.
+          </h1>
           <p class="hero__main-text">
             Every day is a new opportunity to invest in what matters most.<br />
             Whatever you are investing for, we’re here to help you find the best
             ways to start
-            <span class="bold-text">Making Money Meaningful</span>&reg;.
+            <span class="bold-text">Making Money Meaningful</span
+            ><sup>&reg;</sup>.
           </p>
         </article>
       </main>
       <div class="hero__cta">
+        <div class="hero__cta-learn-more">
+          Learn More
+        </div>
+        <div class="hero__cta-arrow">
+          <i class="fas fa-arrow-right"></i>
+        </div>
+      </div>
+      <div class="hero__scroll-down">
         <i class="fas fa-arrow-circle-down fa-2x"></i>
       </div>
-      <div class="hero__scroll-down`"></div>
     </section>
-
-    <i class="fas fa-arrow-right"></i>
   </body>
 </html>
