add background image

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
   </head>
   <body>
     <section class="hero">
+      <div class="hero__overlay"></div>
       <header>
         <div class="header-logo">
-          <img src="./assets/bernstein_logo.png" alt="A|B Bernstein Logo" />
+          <img
+            src="./assets/images/bernstein_logo.png"
+            alt="A|B Bernstein Logo"
+          />
         </div>
         <nav class="header-nav">
           <ul class="header-nav__list">
