--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <i class="fas fa-search fa-lg"></i>
             </li>
             <li class="header-nav__item">
-              <button>
+              <button class="header-nav__button">
                 <i class="far fa-user icon-space__right"></i>Log In
               </button>
             </li>
